--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#AA0000</item>
-        <!--<item name="navigationBarColor">#AA0000</item>-->
-        <item name="colorPrimaryDark">#880000</item>
-        <item name="colorAccent">#FF3333</item>
+        <item name="colorPrimary">#AA55AA</item>
+        <!--<item name="navigationBarColor">#9955AA</item>-->
+        <item name="colorPrimaryDark">#553399</item>
+        <item name="colorAccent">#AA99FF</item>
     </style>
 
     <style name="letter">
