--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#AA55AA</item>
+        <item name="colorPrimary">#99AA99</item>
         <!--<item name="navigationBarColor">#9955AA</item>-->
-        <item name="colorPrimaryDark">#553399</item>
+        <item name="colorPrimaryDark">#779977</item>
         <item name="colorAccent">#AA99FF</item>
     </style>
 
