--- a/app/src/tajik/res/xml/app_tracker.xml
+++ b/app/src/tajik/res/xml/app_tracker.xml
@@ -17,5 +17,7 @@
     <!--</screenName>-->
     <!--  The following value should be replaced with correct property id. -->
     <!--<string name="ga_logLevel">verbose</string>-->
-    <string name="ga_trackingId">UA-58964314-1</string>
+    <!--<string name="ga_trackingId">UA-58964314-1</string>-->
+    <string name="ga_trackingId">UA-61496934-1</string>
+
 </resources>
