--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#99AA99</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
         <!--<item name="navigationBarColor">#9955AA</item>-->
-        <item name="colorPrimaryDark">#779977</item>
-        <item name="colorAccent">#AA99FF</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="letter">
